--- a/app/src/main/res/layout/activity_fragments.xml
+++ b/app/src/main/res/layout/activity_fragments.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="407dp"
-        android:layout_height="79dp"
+        android:layout_width="430dp"
+        android:layout_height="75dp"
         android:layout_marginTop="24dp"
         android:background="#3051F6"
         android:text="Statistics"
@@ -44,22 +44,30 @@
             android:text="Statistics" />
 
         <Button
-            android:id="@+id/btnCharts"
+            android:id="@+id/btnPieChart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Charts" />
+            android:text="Pie Chart" />
+
+        <Button
+            android:id="@+id/btnBarGraph"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Bar Graph" />
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/contentFragmentContainer"
-        android:layout_width="409dp"
-        android:layout_height="477dp"
+        android:layout_width="427dp"
+        android:layout_height="480dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonPanel"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="2dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnGoToMenu"
