--- a/app/src/main/res/layout/bar_graph.xml
+++ b/app/src/main/res/layout/bar_graph.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <com.anychart.AnyChartView
-        android:id="@+id/any_chart_view"
+        android:id="@+id/any_chart_view2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
