--- a/app/src/main/res/anim/right_sword_anim.xml
+++ b/app/src/main/res/anim/right_sword_anim.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+    android:interpolator="@android:anim/overshoot_interpolator"
     android:fillAfter="true">
 
-    <!-- Longer slide from the right (slower) -->
+    <!-- Slide from the right -->
     <translate
-        android:fromXDelta="180"
+        android:fromXDelta="200"
         android:toXDelta="0"
-        android:duration="500" /> <!-- Increased duration -->
+        android:duration="400" />
 
-    <!-- Sharper inward rotation (mirrored) -->
+    <!-- Smooth inward rotation (mirrored) -->
     <rotate
         android:fromDegrees="0"
-        android:toDegrees="-12"
+        android:toDegrees="-15"
         android:pivotX="50%"
         android:pivotY="100%"
         android:startOffset="100"
-        android:duration="300" /> <!-- Increased duration -->
+        android:duration="300" />
 
-    <!-- Impact bounce -->
+    <!-- Stronger impact bounce -->
     <scale
         android:fromXScale="1.0"
-        android:toXScale="1.05"
+        android:toXScale="1.1"
         android:fromYScale="1.0"
-        android:toYScale="1.05"
+        android:toYScale="1.1"
         android:pivotX="50%"
         android:pivotY="50%"
         android:startOffset="300"
-        android:duration="200" />
+        android:duration="250" />
 </set>
