--- a/app/src/main/res/layout/battle_arena.xml
+++ b/app/src/main/res/layout/battle_arena.xml
@@ -7,10 +7,7 @@
     android:layout_height="match_parent"
     android:background="#f5f5f5">
 
-
-
     <!-- Header -->
-
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
@@ -65,25 +62,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="76dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="124dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        app:srcCompat="@drawable/sword_right" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="74dp"
-        android:layout_height="80dp"
-        android:layout_marginStart="136dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2"
-        app:srcCompat="@drawable/sword_left" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -133,12 +111,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
+        <!-- Sword on the left -->
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:layout_marginEnd="65dp"
+            android:layout_marginEnd="80dp"
             android:text="VS"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toStartOf="@+id/imageView8"
@@ -148,8 +127,8 @@
             android:id="@+id/imageView7"
             android:layout_width="94dp"
             android:layout_height="100dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -158,12 +137,32 @@
             android:id="@+id/imageView8"
             android:layout_width="94dp"
             android:layout_height="100dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@android:drawable/btn_star_big_off" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="74dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@+id/imageView7"
+            app:layout_constraintTop_toTopOf="@+id/imageView7"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+            app:srcCompat="@drawable/sword_left" />
+
+        <!-- Sword on the right -->
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="76dp"
+            android:layout_height="82dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/imageView8"
+            app:layout_constraintTop_toTopOf="@+id/imageView8"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+            app:srcCompat="@drawable/sword_right" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
