--- a/app/src/main/res/layout/battle_arena.xml
+++ b/app/src/main/res/layout/battle_arena.xml
@@ -56,8 +56,8 @@
         app:layout_constraintStart_toEndOf="@+id/healthBar1"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <TextView
-        android:id="@+id/battleLogs"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="411dp"
         android:layout_height="160dp"
         android:layout_marginBottom="12dp"
@@ -65,7 +65,15 @@
         app:layout_constraintBottom_toTopOf="@+id/btnNextAttack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/battleLogs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:typeface="monospace" />
+    </ScrollView>
 
     <Button
         android:id="@+id/btnNextAttack"
