--- a/app/src/main/res/layout/item_lutemon.xml
+++ b/app/src/main/res/layout/item_lutemon.xml
@@ -8,9 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="405dp"
         android:layout_height="208dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,9 +25,9 @@
                 android:layout_width="120dp"
                 android:layout_height="103dp"
                 android:layout_marginStart="11dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="52dp"
                 app:layout_constraintEnd_toStartOf="@+id/lutemon_name"
-                app:layout_constraintHorizontal_bias="0.161"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_notification_overlay" />
@@ -38,21 +36,21 @@
                 android:id="@+id/lutemon_name"
                 android:layout_width="185dp"
                 android:layout_height="35dp"
-                android:layout_marginStart="26dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="20dp"
                 android:text="Lutemon name"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/lutemon_stats"
-                app:layout_constraintStart_toEndOf="@+id/imageViewS"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/lutemon_stats"
-                android:layout_width="181dp"
-                android:layout_height="77dp"
+                android:layout_width="185dp"
+                android:layout_height="135dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="62dp"
                 android:text="Lutemon details"
@@ -72,8 +70,10 @@
                 android:layout_marginBottom="131dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.866"
                 app:layout_constraintStart_toEndOf="@+id/lutemon_name"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
